--- a/_config.yml
+++ b/_config.yml
@@ -1,117 +1,86 @@
 # --------------------------------------------------
 #  BASIC SITE INFO
 # --------------------------------------------------
-title: Hanlin Cai   # Main site title (appears in browser tab & RSS)
-tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.  # Optional short tagline, used by some layouts
-description: Here is personal website of Hanlin Cai, PhD Student at the University of Cambridge.  # Strongly recommended for SEO & social cards
+title: Hairong Ni
+tagline: Personal academic website of Hairong Ni.
+description: Personal website of Hairong Ni, undergraduate student in Computer Science at the University of Michigan.
 
-# TIP ── For local development you can comment out `url`
-# and build with relative paths. In production you want this set.
-url: https://caihanlin.com
+# GitHub Pages 部署时，建议保留 url
+# 如果你用的是 https://laluluya.github.io
+url: https://laluluya.github.io
 
 # --------------------------------------------------
 #  AUTHOR / PROFILE DATA
 # --------------------------------------------------
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
-  # bio: Dream big, stay positive, work hard, and enjoy the journey.
-  email: hc663@cam.ac.uk
-  # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
+  name: Hairong Ni
+  avatar: avatar.jpg        # 你可以之后放一张头像到 assets/images/
+  email: laluluya@umich.edu
+  # cv: https://drive.google.com/file/d/1-VQyFZgRzju6FHwvlhRYeBGbXhyR1NMB/view
 
-  # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
-  github: GuangLun2000
-  linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  researchgate: https://www.researchgate.net/profile/Hanlin-Cai
-  zhihu: https://www.zhihu.com/people/chlire
-  xiaohongshu: 5c27848f0000000005030c6f
-  instagram: lancecai2002
-  bilibili: 594030035
-  # facebook: caihanlin2002
-  # lastfm:
-  # tumblr:
-
+  # Social links（只留你真的用的）
+  github: Laluluya
+  linkedin: hairong-ni-326172383
+  # scholar:                # ❗没有就不要写
+  # researchgate:
+  # twitter:
+  # instagram:
+  # zhihu:
+  # xiaohongshu:
+  # bilibili:
 
 # --------------------------------------------------
 #  SEARCH-ENGINE VERIFICATION & ANALYTICS
 # --------------------------------------------------
-google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
-# bing_verify: ""    # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-# google_analytics: "G-XXXXXXX"                                 # GA-4 property ID
-
+# 这些你现在完全可以不填
+# google_verify: ""
+# google_analytics: ""
 
 # --------------------------------------------------
 #  TOP NAVIGATION BAR
-#  `external: true` opens the link in a new tab.
 # --------------------------------------------------
 links:
   - title: About Me
     url: /
-  - title: Publications
-    url: /publications/
-  - title: Services
-    url: /services/
   - title: Awards
     url: /awards/
+  - title: Teaching
+    url: /teaching/
   - title: Hobbies
     url: /hobbies/
-  - title: Blogs
-    url: /blogs/
-  - title: 中文
-    url: /cn/
 
 
 # --------------------------------------------------
 #  BUILD & RENDERING OPTIONS
 # --------------------------------------------------
-timezone: Asia/Shanghai          # IANA time-zone ID (China/Beijing is invalid)
-future: true                     # Render posts dated in the future
-highlighter: rouge               # Code highlighter; Rouge is default in MM
-# markdown: kramdown             # Jekyll default; uncomment to force
-# pygments: true                 # Legacy option (Rouge supersedes this)
-
+timezone: America/Detroit
+future: true
+highlighter: rouge
 
 # --------------------------------------------------
 #  PERMALINK STRUCTURE
 # --------------------------------------------------
-permalink: /:categories/:title    # e.g. /tech/my-post/
-
+permalink: /:categories/:title
 
 # --------------------------------------------------
-#  KRAMDOWN (Markdown engine) SETTINGS
+#  KRAMDOWN SETTINGS
 # --------------------------------------------------
 kramdown:
   auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
   toc_levels: 1..6
   enable_coderay: false
 
-  # coderay:
-  #   coderay_line_numbers:
-  #   coderay_line_numbers_start: 1
-  #   coderay_tab_width: 4
-  #   coderay_bold_every: 10
-  #   coderay_css: class
-
+# --------------------------------------------------
+#  DISQUS（不建议本科生现在用，先关掉）
+# --------------------------------------------------
+# disqus:
+#   shortname:
 
 # --------------------------------------------------
-#  DISQUS COMMENT SYSTEM
+#  INCLUDE / EXCLUDE
 # --------------------------------------------------
-disqus:
-  shortname: lancecai
-
-
-# include: [".htaccess"]
-# exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "minimal-mistakes.sublime-project", "minimal-mistakes.sublime-workspace"]
-
-# --------------------------------------------------
-#  INCLUDE / EXCLUDE Lists
-# --------------------------------------------------
-include: [".htaccess"]           # Files to force-include in the build
-exclude:                         # Folders/files ignored during build
+include: [".htaccess"]
+exclude:
   - "lib"
   - "config.rb"
   - "Capfile"
@@ -121,17 +90,11 @@ exclude:                         # Folders/files ignored during build
   - "Rakefile.rb"
   - "tmp"
   - "less"
-  - "minimal-mistakes.sublime-project"
-  - "minimal-mistakes.sublime-workspace"
-
 
 # --------------------------------------------------
-#  OPTIONAL PLUG-INS (uncomment once gems are added)
+#  PLUGINS
 # --------------------------------------------------
 plugins:
-  - jekyll-feed          # Auto-generate RSS feed
-  - jekyll-sitemap       # Auto-generate sitemap.xml
-  - jekyll-seo-tag       # Adds SEO meta tags & JSON-LD
-#   - jekyll-picture-tag   # Responsive images & WebP/AVIF
-  # - jekyll-archives      # Year/month archive pages
-
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
