--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: https://laluluya.github.io
 # --------------------------------------------------
 owner:
   name: Hairong Ni
-  avatar: avatar.jpg        # 你可以之后放一张头像到 assets/images/
+  avatar: hanlin.jpg        # 你可以之后放一张头像到 assets/images/
   email: laluluya@umich.edu
   # cv: https://drive.google.com/file/d/1-VQyFZgRzju6FHwvlhRYeBGbXhyR1NMB/view
 
